# seminar_message_manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
seminar_message_manager/: smm.py
seminar_msg/: __init__.py  mail_utils.py  seminar_msg.py  zulip_utils.py
smm/: __init__.py
templates/discord/: announcement.md
templates/mail/: announcement.html
templates/zulip/: announcement.md
