[project]
authors = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
  { name = "Gwendal Debaussart-Joniec", email = "gwendal.debaussart@ens-paris-saclay.fr" },
]
maintainers = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
  { name = "Gwendal Debaussart-Joniec", email = "gwendal.debaussart@ens-paris-saclay.fr" },
]
name = "smm"
dependencies = ["pandas>=2.3.2", "zulip>=0.9.1"]
description = "A package to automate message generation and sending for seminars from a csv file"
readme = "README.md"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "smm.__version__" }

[tool.setuptools.packages.find]
include = ["smm"]

[project.urls]
Repository = "https://github.com/gaetanserre/seminars_msg_gen"

[project.scripts]
smm = "smm.smm:main"

[build-system]
requires = ["setuptools", "toml"]
